simpler scrape schedule

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ API_PORT=5000
 
 # Scraper Configuration
 SCRAPE_INTERVAL=60 # in seconds
-NON_FIRST_CYCLE_MAX_PAGES=1 # First n-pages of search result to keep scraping in each iteration
+MAX_PAGES=1 # First n-pages of search result to keep scraping in each iteration
 
 # Browser Fingerprinting (recommend to match this machine's timezone and IP, or proxy's if you use it)
 BROWSER_TIMEZONE=America/Los_Angeles
